cmake_minimum_required(VERSION 3.19)
project(Prepare)

set(CMAKE_CXX_STANDARD 17)

add_executable(Prepare main.cpp Shape.cpp Shape.h Triangle.cpp Triangle.h AlgoExpert/BinaryTree.cpp AlgoExpert/BinaryTree.h AlgoExpert/Binaries.cpp AlgoExpert/interval_map.cpp AlgoExpert/stack_using_two_queues.cpp AlgoExpert/stack_using_two_queues.h AlgoExpert/staack.cpp AlgoExpert/staack.cpp AlgoExpert/staack.cpp)